Added some codes

--- a/Home.html
+++ b/Home.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="" href="./IMAGES/whatsappicon.png" />
+  <link rel="icon" type="" href="https://static.whatsapp.net/rsrc.php/v3/yk/r/XLL-1_89W40.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Business Whatsapp Clone">
   <meta property="og:type" content="website">
   <meta property="og:image"
     content="https://images.unsplash.com/photo-1599382103240-5f2a57137d28?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHdoYXRzYXBwfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60">
-  <meta property="og:url" content="">
+  <meta property="og:url" content="https://ovwhatsapp-homepage-clone.netlify.app/">
   <meta property="og:description" content="Make Your Calls and send messages at no cost">
   <meta property="og:locale" content="en_US">
   <meta property="og:site name" content="Business Whatsapp Clone">
@@ -64,7 +64,10 @@
   <!-- I add elements to the main element of the page-->
 
   <main>
-
+    <section id="advert">
+      <p>Join us virtually to usher in the era of the message-driven business — Sept 20 <a href="#">[Register now]</a>
+      </p>
+    </section>
     <!-- I add the first section-->
 
     <section id="productchoice">
@@ -198,8 +201,6 @@
 
       <span>
         <i id="arrow3" class="fa-solid fa-circle-arrow-right"><a href="#" class="arrowtext">Read success stories</a></i>
-        <span id="rewindbtn2" class="fa-solid fa-circle-arrow-left"></span>
-        <span id="forwardbtn2" class="fa-solid fa-circle-arrow-right"></span>
       </span>
       <!-- End of Section-->
     </section>
@@ -210,66 +211,32 @@
 
       <!-- The first div contains two span elements with direction icons that is only visible on extra large screen size-->
 
-      <div id="directionbtn">
-        <span id="rewindbtn" class="fa-solid fa-circle-arrow-left"></span>
-        <span id="forwardbtn" class="fa-solid fa-circle-arrow-right"></span>
+      <div class="carouseldiv">
+        <h1>Bank Mandiri</h1>
+        <img
+          src="https://scontent.whatsapp.net/v/t39.8562-34/346081476_939776587222133_7674350954655842072_n.jpg?ccb=1-7&_nc_sid=2fbf2a&_nc_ohc=G9bq788vU54AX-K_JB2&_nc_ht=scontent.whatsapp.net&oh=01_AdSSp_UDLLer_VXLTPkQPBNECVC6ej0yghEU08voZgI_Lw&oe=650DEAD5"
+          alt="woman smiling">
+      </div>
+      <div class="carouseldiv">
+        <h1>Modanisa</h1>
+        <img
+          src="https://scontent.whatsapp.net/v/t39.8562-34/279903336_545851256881146_6599763337773636614_n.jpg?ccb=1-7&_nc_sid=2fbf2a&_nc_ohc=tdlu3zr1BlgAX81YHi7&_nc_ht=scontent.whatsapp.net&oh=01_AdRvLEytjGoaejHm0WSZdpAb3ryIHU6qHW_HeKMxnwq32g&oe=650C5F1D"
+          alt="white woman in jacket">
+      </div>
+      <div class="carouseldiv">
+        <h1>Omay Foods</h1>
+        <img
+          src="https://scontent.whatsapp.net/v/t39.8562-34/280033838_5385509214793754_7362049937017859286_n.jpg?ccb=1-7&_nc_sid=2fbf2a&_nc_ohc=4hsUUK6VROYAX8Q6KCz&_nc_ht=scontent.whatsapp.net&oh=01_AdR7leEygLsqY65P-8rlC5oynyCTpxowlXw9yYecuHeDWg&oe=650E016F"
+          alt="food shop">
+      </div>
+      <div class="carouseldiv">
+        <h1>Cheel</h1>
+        <img
+          src="https://scontent.whatsapp.net/v/t39.8562-34/279964288_509659754131417_3849910977039338484_n.jpg?ccb=1-7&_nc_sid=2fbf2a&_nc_ohc=GFjbsbepMj8AX8GwYHH&_nc_ht=scontent.whatsapp.net&oh=01_AdSXzq1JeHLwamv8zAP8Bqq4FUXoBnk16GHQ81RWkpeyDg&oe=650DF8E3"
+          alt="random image">
       </div>
 
-      <!-- The second div contains a Carousel element gotten from Bootstrap-->
-
-      <div id="carouselExampleDark" class="carousel carousel-dark slide">
-
-        <!-- I edited the carousel contents to suit what i need-->
-
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3"
-            aria-label="Slide 4"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000">
-            <div class="carousel-caption d-none d-md-block">
-              <h1>Bank Mandiri</h1>
-            </div>
-            <img id="carimg1" src="./IMAGES/img3" class="d-block" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <div class="carousel-caption d-none d-md-block">
-              <h1>Modanisa</h1>
-            </div>
-            <img id="carimg2" src="./IMAGES/img4" class="d-block" alt="...">
-          </div>
-          <div class="carousel-item">
-            <div class="carousel-caption d-none d-md-block">
-              <h1>Omay Foods</h1>
-            </div>
-            <img id="carimg3" src="./IMAGES/img5" class="d-block" alt="...">
-          </div>
-          <div class="carousel-item">
-            <div class="carousel-caption d-none d-md-block">
-              <h1>Omay Foods</h1>
-            </div>
-            <img id="carimg4" src="./IMAGES/img6" class="d-block" alt="...">
-          </div>
-
-          <button id="prev" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-
-        <!-- End of section-->
+      <!-- End of section-->
 
     </section>
 
