--- a/Home.html
+++ b/Home.html
@@ -40,11 +40,11 @@
 
       <div id="menu">
         <ul>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Resources</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Developers</a></li>
-          <li><a href="#">Partner</a></li>
+          <li><a href="https://business.whatsapp.com/products/business-platform">Products</a></li>
+          <li><a href="https://business.whatsapp.com/resources/success-stories">Resources</a></li>
+          <li><a href="https://business.whatsapp.com/blog">Blog</a></li>
+          <li><a href="https://developers.facebook.com/support">Developers</a></li>
+          <li><a href="https://web.facebook.com/business/marketing-partners?_rdc=1&_rdr">Partner</a></li>
         </ul>
         <button type="submit">Get Started</button>
       </div>
@@ -67,7 +67,8 @@
   <main>
     <!-- First of all i add a section for the whatsapp advert which can be removed soon after September 20-->
     <section id="advert">
-      <p>Join us virtually to usher in the era of the message-driven business — Sept 20 <a href="#">[Register now]</a>
+      <p>Announcing WhatsApp Flows. <a
+          href="https://business.whatsapp.com/blog/new-experiences-announced-at-conversations-event">Learn More</a>
       </p>
     </section>
     <!-- I add the first main section-->
@@ -111,7 +112,8 @@
         <i class="fa-solid fa-briefcase"></i>
         <h3>Whatsapp Business Platform</h3>
         <p>For medium to large businesses communicating with customers at scale through programmatic access</p>
-        <i id="arrow2" class="fa-solid fa-circle-arrow-right"><a href="#" class="arrowtext">Get Started</a></i>
+        <i id="arrow2" class="fa-solid fa-circle-arrow-right"><a
+            href="https://business.whatsapp.com/products/business-platform" class="arrowtext">Get Started</a></i>
       </div>
 
       <!-- I add the second div-->
@@ -120,7 +122,8 @@
         <i class="fa-solid fa-house-laptop"></i>
         <h3>Whatsapp Business App</h3>
         <p>For small businesses who personally manage conversations with customers</p>
-        <i id="arrow1" class="fa-solid fa-circle-arrow-right"><a href="#" class="arrowtext">Download App</a></i>
+        <i id="arrow1" class="fa-solid fa-circle-arrow-right"><a
+            href="https://business.whatsapp.com/products/business-app" class="arrowtext">Download App</a></i>
       </div>
 
       <!-- End of section-->
@@ -202,7 +205,9 @@
       <!-- The span contains one "Right arrow icon" as well as two spans containing direction icons all gotten from Font Awesome. These two span elements are only visible on smaller devices-->
 
       <span>
-        <i id="arrow3" class="fa-solid fa-circle-arrow-right"><a href="#" class="arrowtext">Read success stories</a></i>
+        <i id="arrow3" class="fa-solid fa-circle-arrow-right"><a
+            href="https://business.whatsapp.com/resources/success-stories" class="arrowtext">Read success
+            stories</a></i>
       </span>
       <!-- End of Section-->
     </section>
@@ -215,27 +220,19 @@
 
       <div class="carouseldiv">
         <h1>Bank Mandiri</h1>
-        <img
-          src="https://scontent.whatsapp.net/v/t39.8562-34/346081476_939776587222133_7674350954655842072_n.jpg?ccb=1-7&_nc_sid=2fbf2a&_nc_ohc=G9bq788vU54AX-K_JB2&_nc_ht=scontent.whatsapp.net&oh=01_AdSSp_UDLLer_VXLTPkQPBNECVC6ej0yghEU08voZgI_Lw&oe=650DEAD5"
-          alt="woman smiling">
+        <img src="./IMAGES/mandiri.jpg" alt="woman smiling">
       </div>
       <div class="carouseldiv">
         <h1>Modanisa</h1>
-        <img
-          src="https://scontent.whatsapp.net/v/t39.8562-34/279903336_545851256881146_6599763337773636614_n.jpg?ccb=1-7&_nc_sid=2fbf2a&_nc_ohc=tdlu3zr1BlgAX81YHi7&_nc_ht=scontent.whatsapp.net&oh=01_AdRvLEytjGoaejHm0WSZdpAb3ryIHU6qHW_HeKMxnwq32g&oe=650C5F1D"
-          alt="white woman in jacket">
+        <img src="./IMAGES/modanisa.jpg" alt="white woman in jacket">
       </div>
       <div class="carouseldiv">
         <h1>Omay Foods</h1>
-        <img
-          src="https://scontent.whatsapp.net/v/t39.8562-34/280033838_5385509214793754_7362049937017859286_n.jpg?ccb=1-7&_nc_sid=2fbf2a&_nc_ohc=4hsUUK6VROYAX8Q6KCz&_nc_ht=scontent.whatsapp.net&oh=01_AdR7leEygLsqY65P-8rlC5oynyCTpxowlXw9yYecuHeDWg&oe=650E016F"
-          alt="food shop">
+        <img src="./IMAGES/omay foods.jpg" alt="food shop">
       </div>
       <div class="carouseldiv">
         <h1>Cheel</h1>
-        <img
-          src="https://scontent.whatsapp.net/v/t39.8562-34/279964288_509659754131417_3849910977039338484_n.jpg?ccb=1-7&_nc_sid=2fbf2a&_nc_ohc=GFjbsbepMj8AX8GwYHH&_nc_ht=scontent.whatsapp.net&oh=01_AdSXzq1JeHLwamv8zAP8Bqq4FUXoBnk16GHQ81RWkpeyDg&oe=650DF8E3"
-          alt="random image">
+        <img src="./IMAGES/cheel.jpg" alt="random image">
       </div>
 
       <!-- End of section-->
@@ -265,11 +262,11 @@
     <img id="footerlogo" src="./IMAGES/brandlogo2.svg">
 
     <ul>
-      <li><a href="#">Trust & Safety</a></li>
-      <li><a href="#">Become a Partner</a></li>
-      <li><a href="#">Help</a></li>
-      <li><a href="#">Terms and Conditions</a></li>
-      <li><a href="#">Data Policy</a></li>
+      <li><a href="https://business.whatsapp.com/trust-and-safety">Trust & Safety</a></li>
+      <li><a href="https://business.whatsapp.com/learn-more">Become a Partner</a></li>
+      <li><a href="https://faq.whatsapp.com/">Help</a></li>
+      <li><a href="https://business.whatsapp.com/terms-and-conditions">Terms and Conditions</a></li>
+      <li><a href="https://free.facebook.com/privacy/policy/#">Data Policy</a></li>
     </ul>
 
     <span>2023 © WhatsApp Business</span>
